--- a/opencvarucodetection/index.html
+++ b/opencvarucodetection/index.html
@@ -49,14 +49,17 @@
          You may later hide these elements by setting display:none. */
       #video,
       #canvas {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        width: 320px;
-        height: 240px;
-        border: 2px solid red;
-        z-index: 9999;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        z-index: 0; 
+        border: none;
       }
+      
+
       /* D-Pad and stop button styles from your original project */
       .d-pad {
         position: absolute;
