--- a/opencvarucodetection/index.html
+++ b/opencvarucodetection/index.html
@@ -223,8 +223,8 @@
       <!-- The track entity now contains your racing track glTF model -->
       <a-entity id="track" visible="false">
         <a-gltf-model
-          src="./models/racing_track.gltf"
-          scale="1 1 1"
+          src="./models/updatetrack.gltf"
+          scale="0.5 0.5 0.5"
           position="0 0 0"
           rotation="90 0 0"
         >
