Basic welcome page

--- a/ec2-server/public/qr.html
+++ b/ec2-server/public/qr.html
@@ -18,12 +18,15 @@
     }
     .container {
       background: rgba(255, 255, 255, 0.8);
-      padding: 20px;
+      padding: 18px;
+      padding-top: 0px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     h2 {
       margin-bottom: 15px;
+      font-size: 32px;
+      font-weight: 800;
       color: #333;
     }
     img {
@@ -35,7 +38,8 @@
 
 <body>
   <div class="container">
-    <h2>CozmoKart (aka Rob<span style="font-weight: 900; text-decoration: underline;">AR</span>tic)</h2>
+    <h2>CozmoKart</h2>
+    <h3>An Augmented Reality Racing Game</h3>
     <img src="./assets/qr.png" alt="QR Code for CozmoKart">
   </div>
 </body>
