--- a/ec2-server/public/index.html
+++ b/ec2-server/public/index.html
@@ -65,7 +65,7 @@
 
     #enableSensorsText {
       font-weight: 700;
-      color:red;
+      color: red;
       text-decoration: underline;
       display: inline;
     }
@@ -82,27 +82,42 @@
 <body>
   <div class="container">
     <h1>Welcome to CozmoKart!</h1>
-    <img src="assets/qr_background.jpg" alt="CozmoKart Racing Game" id="welcome-image" height="50px">
-    <div class="terms">
-      <label>
-        <input type="checkbox" id="termsCheckbox">
-        I accept that my robot control actions and game progress on this website will be logged and used for EE 98 data
-        collection purposes. Video/camera data will <span style="font-style: italic;">NOT</span> be collected.
-      </label>
-      <br><br>
-      <label>
-        <input type="checkbox" id="enableSensorsCheckbox">
-        <p id="enableSensorsText">I understand that CozmoKart will need to access to this device's camera and motion
-          sensors.</p>
-      </label>
+    <div id="welcome-content">
+      <img src="assets/qr_background.jpg" alt="CozmoKart Racing Game" id="welcome-image" height="50px">
+      <div class="terms">
+        <label>
+          <input type="checkbox" id="termsCheckbox">
+          I accept that my robot control actions and game progress on this website will be logged and used for EE 98
+          data
+          collection purposes. Video/camera data will <span style="font-style: italic;">NOT</span> be collected.
+        </label>
+        <br><br>
+        <label>
+          <input type="checkbox" id="enableSensorsCheckbox">
+          <p id="enableSensorsText">I understand that CozmoKart will need to access to this device's camera and motion
+            sensors.</p>
+        </label>
+      </div>
+      <button id="nextButton" disabled>Next</button>
     </div>
-    <button id="nextButton" disabled>Next</button>
+    <div id="systemCheck" style="margin-top: 20px; text-align: left; display: none;">
+      <h3>System Check</h3>
+      <p id="cameraStatus">Camera Access: <span style="color: gray;">Checking...</span></p>
+      <p id="orientationStatus">Orientation Controls: <span style="color: gray;">Checking...</span></p>
+
+      <h3>Game Status</h3>
+      <p id="serverStatus">CozmoKart Server Status<span style="color: gray;">Checking...</span></p>
+
+    </div>
   </div>
 
   <script>
     const termsCheckbox = document.getElementById('termsCheckbox');
     const nextButton = document.getElementById('nextButton');
     const enableSensorsCheckbox = document.getElementById('enableSensorsCheckbox');
+    const cameraStatus = document.getElementById('cameraStatus');
+    const orientationStatus = document.getElementById('orientationStatus');
+    const serverStatus = document.getElementById('serverStatus');
 
     termsCheckbox.addEventListener('change', () => {
       nextButton.disabled = !termsCheckbox.checked || !enableSensorsCheckbox.checked;
@@ -111,6 +126,52 @@
     enableSensorsCheckbox.addEventListener('change', () => {
       nextButton.disabled = !termsCheckbox.checked || !enableSensorsCheckbox.checked;
     });
+
+    nextButton.addEventListener('click', () => {
+      // Check for camera access
+      document.getElementById('welcome-content').style.display = 'none';
+      document.getElementById('systemCheck').style.display = 'block';
+      navigator.mediaDevices.getUserMedia({ video: true })
+        .then(() => {
+          cameraStatus.innerHTML = 'Camera Access: <span style="color: green;">Available</span>';
+        })
+        .catch((e) => {
+          console.log(e)
+          cameraStatus.innerHTML = 'Camera Access: <span style="color: red;">Unavailable</span>';
+        });
+
+      // Check for orientation controls
+      if ('DeviceOrientationEvent' in window) {
+        orientationStatus.innerHTML = 'Orientation Controls: <span style="color: green;">Available</span>';
+      } else {
+        orientationStatus.innerHTML = 'Orientation Controls: <span style="color: red;">Unavailable</span>';
+      }
+
+      // Check server status
+      const socketTest = io('https://cozmokart.site', { transports: ['websocket'] });
+      socketTest.on('connect', (socket) => {
+        socket.send("status");
+      });
+      socketTest.on('message', (data) => {
+        if (data.startsWith("clients:")) {
+          if (parseInt(data.split(" ")[1]) > 0) {
+            serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: yellow;">Please Wait for Another User Session to End</span>';
+          }
+          else if (parseInt(data.split(" ")[1]) == 0) {
+            serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: green;">Avaliable</span>';
+          }
+        }
+
+      });
+      socketTest.on('error', (error) => {
+        console.error('Socket error:', error);
+        serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: red;">Disconnected</span>';
+      });
+
+
+
+    })
+
   </script>
 </body>
 
