--- a/ec2-server/public/index.html
+++ b/ec2-server/public/index.html
@@ -25,7 +25,7 @@
 
     @media only screen and (max-width: 600px) {
       .container {
-        margin: 10px 10px;
+        margin: 10px;
       }
     }
 
@@ -77,6 +77,7 @@
       border-radius: 8px;
     }
   </style>
+  <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -106,73 +107,99 @@
       <p id="orientationStatus">Orientation Controls: <span style="color: gray;">Checking...</span></p>
 
       <h3>Game Status</h3>
-      <p id="serverStatus">CozmoKart Server Status<span style="color: gray;">Checking...</span></p>
+      <p id="serverStatus">CozmoKart Server Status: <span style="color: gray;">Checking...</span></p>
 
+      <button id="startGameButton" disabled style="margin-top: 20px;">Start Game</button>
     </div>
-  </div>
 
-  <script>
-    const termsCheckbox = document.getElementById('termsCheckbox');
-    const nextButton = document.getElementById('nextButton');
-    const enableSensorsCheckbox = document.getElementById('enableSensorsCheckbox');
-    const cameraStatus = document.getElementById('cameraStatus');
-    const orientationStatus = document.getElementById('orientationStatus');
-    const serverStatus = document.getElementById('serverStatus');
+    <script>
+      const termsCheckbox = document.getElementById('termsCheckbox');
+      const nextButton = document.getElementById('nextButton');
+      const enableSensorsCheckbox = document.getElementById('enableSensorsCheckbox');
+      const cameraStatus = document.getElementById('cameraStatus');
+      const orientationStatus = document.getElementById('orientationStatus');
+      const serverStatus = document.getElementById('serverStatus');
+      const startGameButton = document.getElementById('startGameButton');
 
-    termsCheckbox.addEventListener('change', () => {
-      nextButton.disabled = !termsCheckbox.checked || !enableSensorsCheckbox.checked;
-    });
+      termsCheckbox.addEventListener('change', () => {
+        nextButton.disabled = !termsCheckbox.checked || !enableSensorsCheckbox.checked;
+      });
 
-    enableSensorsCheckbox.addEventListener('change', () => {
-      nextButton.disabled = !termsCheckbox.checked || !enableSensorsCheckbox.checked;
-    });
+      enableSensorsCheckbox.addEventListener('change', () => {
+        nextButton.disabled = !termsCheckbox.checked || !enableSensorsCheckbox.checked;
+      });
 
-    nextButton.addEventListener('click', () => {
-      // Check for camera access
-      document.getElementById('welcome-content').style.display = 'none';
-      document.getElementById('systemCheck').style.display = 'block';
-      navigator.mediaDevices.getUserMedia({ video: true })
-        .then(() => {
-          cameraStatus.innerHTML = 'Camera Access: <span style="color: green;">Available</span>';
-        })
-        .catch((e) => {
-          console.log(e)
-          cameraStatus.innerHTML = 'Camera Access: <span style="color: red;">Unavailable</span>';
+      nextButton.addEventListener('click', () => {
+        // Check for camera access
+        document.getElementById('welcome-content').style.display = 'none';
+        document.getElementById('systemCheck').style.display = 'block';
+        navigator.mediaDevices.getUserMedia({ video: true })
+          .then(() => {
+            cameraStatus.innerHTML = 'Camera Access: <span style="color: green;">Available</span>';
+            checkAllGreen();
+          })
+          .catch(() => {
+            cameraStatus.innerHTML = 'Camera Access: <span style="color: red;">Unavailable</span>';
+            checkAllGreen();
+          });
+
+        // Check for orientation controls
+        if ('DeviceOrientationEvent' in window) {
+          orientationStatus.innerHTML = 'Orientation Controls: <span style="color: green;">Available</span>';
+        } else {
+          orientationStatus.innerHTML = 'Orientation Controls: <span style="color: red;">Unavailable</span>';
+        }
+        checkAllGreen();
+
+        // Check server status
+        let pollServer = null;
+        const socket = io('http://localhost:3000', { transports: ['websocket'] });
+
+        socket.on('connect', () => {
+          socket.send("status");
+          pollServer = setInterval(() => {
+            socket.send("status");
+          }, 3000);
         });
 
-      // Check for orientation controls
-      if ('DeviceOrientationEvent' in window) {
-        orientationStatus.innerHTML = 'Orientation Controls: <span style="color: green;">Available</span>';
-      } else {
-        orientationStatus.innerHTML = 'Orientation Controls: <span style="color: red;">Unavailable</span>';
+        socket.on('message', (data) => {
+          if (data.startsWith("clients:")) {
+            if (parseInt(data.split(" ")[1]) > 0) {
+              serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: brown;">Please wait for a spot to open...</span>';
+            } else if (parseInt(data.split(" ")[1]) == 0) {
+              serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: green;">Available</span>';
+              clearInterval(pollServer);
+              checkAllGreen();
+            }
+          }
+        });
+
+        socket.on('error', (error) => {
+          console.error('Socket error:', error);
+          serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: red;">Disconnected</span>';
+          checkAllGreen();
+        });
+
+        socket.on('connect_error', (error) => {
+          console.error('Connection error:', error);
+          serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: red;">Disconnected</span>';
+          checkAllGreen();
+        });
+      });
+
+      function checkAllGreen() {
+        const cameraGreen = cameraStatus.innerHTML.includes('green');
+        const orientationGreen = orientationStatus.innerHTML.includes('green');
+        const serverGreen = serverStatus.innerHTML.includes('green');
+
+        startGameButton.disabled = !(cameraGreen && orientationGreen && serverGreen);
       }
 
-      // Check server status
-      const socketTest = io('https://cozmokart.site', { transports: ['websocket'] });
-      socketTest.on('connect', (socket) => {
-        socket.send("status");
+      document.getElementById("startGameButton").addEventListener("click", function () {
+        window.location.href = "/debug.html";
       });
-      socketTest.on('message', (data) => {
-        if (data.startsWith("clients:")) {
-          if (parseInt(data.split(" ")[1]) > 0) {
-            serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: yellow;">Please Wait for Another User Session to End</span>';
-          }
-          else if (parseInt(data.split(" ")[1]) == 0) {
-            serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: green;">Avaliable</span>';
-          }
-        }
-
-      });
-      socketTest.on('error', (error) => {
-        console.error('Socket error:', error);
-        serverStatus.innerHTML = 'CozmoKart Server Status: <span style="color: red;">Disconnected</span>';
-      });
-
-
-
-    })
-
-  </script>
+    </script>
+  </div>
 </body>
 
 </html>
