--- a/ec2-server/public/index.html
+++ b/ec2-server/public/index.html
@@ -153,7 +153,7 @@
 
         // Check server status
         let pollServer = null;
-        const socket = io('http://localhost:3000', { transports: ['websocket'] });
+        const socket = io('/', { transports: ['websocket'] });
 
         socket.on('connect', () => {
           socket.send("status");
