--- a/ec2-server/public/joystickCtrl.html
+++ b/ec2-server/public/joystickCtrl.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>On-Screen Joystick</title>
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
     <div id="output">X: 0, Y: 0</div>
   </div>
 
-  <script src="./index.js"></script>
+  <script src="./assets/index.js"></script>
 
 </body>
 </html>
