--- a/ec2-server/public/index.html
+++ b/ec2-server/public/index.html
@@ -196,7 +196,7 @@
       }
 
       document.getElementById("startGameButton").addEventListener("click", function () {
-        window.location.href = "/debug.html";
+        window.location.href = "/cozmokart.html";
       });
     </script>
   </div>
