--- a/ec2-server/public/cozmokart.html
+++ b/ec2-server/public/cozmokart.html
@@ -68,7 +68,7 @@
         center.divideScalar(3);
 
         center.y -= 2.5;
-        center.x -= 0.25;
+        center.x += 0.5;
 
         racetrack.setAttribute('position', center);
         racetrack.setAttribute('visible', true);
