--- a/ec2-server/public/cozmokart.html
+++ b/ec2-server/public/cozmokart.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <a-scene embedded arjs>
+  <a-scene embedded arjs vr-mode-ui="enabled: false">
 
     <a-marker type="pattern" url="markers/pattern-marker_0.patt" id="marker0">
       <a-entity id="dummy0" position="0 0 0"></a-entity>
